--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".GameActivity"></activity>
+        <activity android:name=".Game9Activity"></activity>
+        <activity android:name=".Game8Activity" />
+        <activity android:name=".Game7Activity" />
+        <activity android:name=".Game6Activity" />
+        <activity android:name=".Game5Activity" />
+        <activity android:name=".Game4Activity" />
+        <activity android:name=".Game3Activity" />
+        <activity android:name=".Game2Activity" />
+        <activity android:name=".Game1Activity" />
+        <activity android:name=".GameActivity" />
         <activity android:name=".CatalogActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
